# contextual_failure

./: LICENSE  README.md  pyproject.toml
scripts/carla/: run_scene_3b.py  run_scene_eci.py  run_scene_eci_long.py  run_scene_eci_metric.py  run_scene_random.py
src/contextual_failure/: cli.py
src/contextual_failure/carla/: carla.py  llm_prompt.py
src/contextual_failure/carla/scenic_files/: intersection.scenic  scenario.scenic  scene2.scenic  scene3.scenic  scenic_3.scenic
src/contextual_failure/carla/utils/: scenario_utils.py  yolo_utils.py
src/contextual_failure/utils/: inference_utils.py  path_utils.py
